tests/sksl/errors/InterfaceBlockReservedName.glsl
### Compilation failed:

error: 3: expected ';', but found 'float'
} float;
  ^^^^^
1 error
